duihome (0.21.12~1) unstable; urgency=low

  * [UNRELEASED]
  * Implemented: SWP#3148 Verify tappability of switcher thumbnail close button
  * Implemented: SWP#DUI-3336 Application start-up indication
  * Fixes: NB#176177 - Launcher buttons are not placed in their expected positions

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 23 Jun 2010 14:13:51 +0300

duihome (0.21.11-2) unstable; urgency=low

  * Removed a dependency to maemo-services package

 -- Aki Koskinen <aki.koskinen@nokia.com>  Fri, 18 Jun 2010 13:25:00 +0300

duihome (0.21.11-1) unstable; urgency=low

  * Fixes: NB#167077 - [browser-blocker] Launcher is passing the substitution variables in the Exec field of the .desktop field as parameters when there is no substitution to be done
  * Fixes: NB#171829 - Applications do not get _NET_ACTIVE_WINDOW event

 -- Aki Koskinen <aki.koskinen@nokia.com>  Thu, 17 Jun 2010 16:11:00 +0300

duihome (0.21.10-1) unstable; urgency=low

  * Support for absolute icon paths in .desktop entry files
  * Implemented: SWP#DUI-2666 Verify the UI flow when exiting and re-entering homescreen views
  * Implemented: SWP#DUI-3013 Optimize switcher update when new windows are created, old ones are removed or windows update
  * Fixes: NB#173173 - Launcher view switch needs too much panning. Panning paramteres have now been tuned as required by UI designers
  * Fixes: NB#168403 - Shared QObjects being deleted directly in launcher code.
  * Fixes: NB#173280 - Set wallpaper with large resolution image cause phone freeze
  * Fixes: NB#169123 - Unlocalized application name in application grid

 -- Aki Koskinen <aki.koskinen@nokia.com>  Mon, 14 Jun 2010 11:26:00 +0300

duihome (0.21.9-1) unstable; urgency=low

  * Implemented: SWP#DUI-2724 Support to open launcher at a page where launcher item with certain application icon is displayed.
  * Implemented: SWP#DUI-3019 Switcher overview mode should have no more than 4 thumbnails at one time.